--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');
+:root {
+
+  --background: hsl(240, 17%, 9%);
+  --panel: rgb(44, 42, 59);
+  --panel-lines: rgb(54, 51, 75);
+  --panel-dark-boxes: red;
+  --panel-light-boxes: red;
+
+  --light-area-font-dark: rgb(161, 145, 212);
+  --light-area-font-midtone: rgb(115, 106, 145);
+  --dark-area-font-bright: red;
+  --dark-area-font-midtone: rgb(102, 94, 128);
+  --dark-area-font-darker: red;
+
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  font-family: 'Space Mono', monospace;
+  background-color: var(--background);
+  width: 100vw;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.App h1 {
+  text-transform: uppercase;
+  letter-spacing: 1rem;
+  text-align: center;
+  margin: 0;
+  color: var(--dark-area-font-midtone);
+}
+
+.title {
+  height: 10rem;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App * {
+  box-sizing: border-box;
 }
