--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');
+
 :root {
 
   --background: hsl(240, 17%, 9%);
@@ -10,7 +11,7 @@
   --light-area-font-dark: rgb(161, 145, 212);
   --light-area-font-midtone: rgb(115, 106, 145);
   --dark-area-font-bright: rgb(215, 196, 252);
-  --dark-area-font-midtone: rgb(39, 32, 65);
+  --dark-area-font-midtone: rgb(38, 30, 66);
   --dark-area-font-darker: rgb(255, 255, 255);
 
 }
@@ -30,6 +31,8 @@
   text-align: center;
   margin: 0;
   color: var(--dark-area-font-midtone);
+  -webkit-text-stroke-width: .5px;
+  -webkit-text-stroke-color: rgb(194, 157, 255);
 }
 
 .title {
