--- a/src/components/TipCalculator.module.css
+++ b/src/components/TipCalculator.module.css
@@ -2,9 +2,20 @@
     width: 100%;
     flex: 1;
     background-color: var(--panel);
-    border-radius: 30px 30px 0 0;
+    border-radius: 30px;
     display: flex;
     flex-direction: column;
     padding: 1rem 1rem;
 }
 
+@media (min-width: 800px) {
+
+    .panel {
+        width: 90%;
+        max-width: 1000px;
+        flex: none;
+        display: grid;
+        grid-template: .3fr .3fr .3fr / 1fr 1fr;
+    }
+
+}
