--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,8 @@ footer {
   color: var(--dark-area-font-bright);
   margin-top: auto;
   text-align: center;
+  font-size: .8rem;
+  padding-top: 1rem;
 }
 
 /*light switch*/
@@ -106,7 +108,7 @@ footer {
 }
 
 .slider:before {
-  background-color: rgb(78, 80, 90);
+  background-color: rgb(133, 120, 180);
   bottom: 4px;
   content: "";
   height: 26px;
